# algorithms_exam_variant_3

./: Makefile  ReadMe.md  duplicates.json  pyproject.toml  settings.yml  task.md
.github/workflows/: ci.yml  format.yml  lint.yml
algorithms_exam/src/: main.py
algorithms_exam/src/configs/: app.py
algorithms_exam/src/schemas/: product.py
algorithms_exam/src/service/: file_service.py  jaccard_service.py  kmp_service.py  string_service.py
algorithms_exam/tests/: test_file_service.py  test_jaccard_service.py  test_kmp_service.py  test_string_service.py  test_stub.py
