[project]
name = "algorithms-exam"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreyQuantum",email = "zelentsov1254@gmail.com"}
]
readme = "ReadMe.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf (>=3.2.12,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.ruff.lint.per-file-ignores]
"poetry_python_template/tests/*" = ["E501"]
